# template_cxx_2

./: .clang-tidy  .clangd  CMakeLists.txt  CMakeUserPresets.json  format_count.sh  gitignore
cmake/: CompileOption.cmake  Develop.cmake  Extra.cmake  Install.cmake  Platform.cmake
cmake/check/: check_system.cmake
cmake/templates/: Config.cmake.in
